# repo

./: .gitignore  README.md  eslint.config.mjs  notes.txt  package-lock.json  package.json  scrape_central_region.py
src/: math.js
webscraper/: README.md  TODO.md  analyze_page.py  api.py  commtrex_output.json  convert_to_csv.py  fly.toml  pyproject.toml  requirements.txt  test_output.json  test_scraper.py
webscraper/web-interface/: index.html  package-lock.json  package.json
webscraper/web-interface/src/: App.tsx
webscraper/webscraper/: scraper.py  settings.py
webscraper/webscraper/middlewares/: __init__.py  cloudflare.py  cloudflare_challenge.py  playwright_middleware.py
webscraper/webscraper/spiders/: general_spider.py
