[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper"
version = "0.1.0"
description = "Web scraper with Cloudflare bypass support"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.0",
    "playwright>=1.40.0",
    "cloudscraper>=1.2.71",
    "pandas>=2.1.4",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "js2py>=0.74",
    "pyparsing>=3.1.1",
    "selenium>=4.16.0",
    "requests-toolbelt>=1.0.0",
    "itemadapter>=0.8.0",
    "urllib3>=2.1.0"
]

[tool.setuptools]
packages = ["webscraper"]
